Fix grid alignment and link to artist pages

--- a/assets/scss/pages/_profile.scss
+++ b/assets/scss/pages/_profile.scss
@@ -31,3 +31,11 @@
 #profilePicture:hover #uploadOverlay {
   display: flex;
 }
+
+.artist-name {
+  cursor: pointer;
+}
+
+.artist-name:hover {
+  text-decoration: underline;
+}
